--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   home_indicator: ^2.0.0
   fluttertoast: ^8.0.8
+  confetti: ^0.6.0
 
 dev_dependencies:
   flutter_test:
